[workspace]
members = [".", "macros"]
resolver = "3"

[package]
name = "actor-simple"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
anyhow = { version = "1.0.100" }
thiserror = "2.0.17"
async-trait = "0.1.89"
macros = { path = "./macros" }
actix = "0.13.5"
futures = "0.3.32"

